2003-12-14  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mime-edit.el (mime-charset-type-list): Add entry for iso-8859-1[45].

2003-08-16  Daiki Ueno <ueno@unixuser.org>

	* Don't autoload S/MIME stuff.

	* pgg-def.el (pgg-overriding-user-id): New variable.
	* pgg.el (pgg-universal-user-id-argument): New command.
	* pgg-gpg.el (pgg-scheme-encrypt-region): Prefer
	pgg-overriding-user-id to pgg-gpg-user-id.
	(pgg-scheme-decrypt-region): Ditto.
	(pgg-scheme-sign-region): Ditto.
	(pgg-scheme-insert-key): Ditto.

2003-05-22  Daiki Ueno <ueno@unixuser.org>

	* mime-play.el (mime-activate-mailcap-method): Undo the last change.

2003-05-12  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (turn-on-mime-edit): Protect 1st arg of `message'.
	* mime-view.el (mime-preview-follow-current-entity): Ditto.

2003-05-11  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-w3.el (mime-preview-text/html): Protect 1st arg of `message'.
	* mime-play.el (mime-mailcap-method-sentinel): Ditto.
	(mime-view-message/external-anon-ftp): Ditto.
	(mime-view-message/external-url): Ditto.

2003-05-02  Daiki Ueno  <ueno@unixuser.org>

	* mime-play.el (mime-activate-mailcap-method): Check the existance
	of the temporary file.
	[cf. <Wanderlust:11835>]

2003-04-05  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-view.el (mime-preview-toggle-display): Use boundary with
	children.

2003-02-08  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-view.el (mime-save-situation-examples): Bind print-length
	and print-level.

2002-11-05  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-view.el (mime-preview-find-boundary-info): Change the name of
	the argument from get-mother to with-children along its effect.

2002-11-03  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Decode text
	part only.

2002-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-view-insert-fontified-text-content): Make